Реализованный переход. Kylosov

--- a/app/src/main/res/layout/step_3.xml
+++ b/app/src/main/res/layout/step_3.xml
@@ -74,6 +74,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="100dp"
         android:background="@drawable/border_radius"
+        android:onClick="onStepEmail"
         android:text="Продолжить"
         android:textColor="#0099ff"
         android:textStyle="bold"
