--- a/app/src/main/res/layout/step_3.xml
+++ b/app/src/main/res/layout/step_3.xml
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/white"
-            android:checked="false"
+            android:checked="true"
             android:text="Мужского"
             android:textColor="#FFFFFF" />
 
@@ -82,4 +82,55 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+
+    <LinearLayout
+        android:id="@+id/pagination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/page1"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:text="●"
+            android:textSize="24sp"
+            android:onClick="onStepName"
+            />
+
+        <Button
+            android:id="@+id/page2"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:text="○"
+            android:textSize="24sp"
+            android:onClick="onStepAge"/>
+
+        <Button
+            android:id="@+id/page3"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:text="○"
+            android:textSize="24sp"
+            android:onClick="onStepSex"/>
+
+        <Button
+            android:id="@+id/page4"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:text="○"
+            android:textSize="24sp"
+            android:onClick="onStepEmail"/>
+
+        <Button
+            android:id="@+id/page5"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:text="○"
+            android:textSize="24sp"
+            android:onClick="OnStepFive"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
